# companydb

./: CMakeLists.txt  Makefile  companydb
src/: Company.cpp  Company.h  Customer.cpp  Customer.h  Employee.cpp  Employee.h  Person.cpp  Person.h  Purchase.cpp  Purchase.h  main.cpp
